Adding more items to issue list

--- a/index.html
+++ b/index.html
@@ -58,6 +58,36 @@
 					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" /></label>
 				</div>
 			</section>
+			<section class="issue-group">
+				<h4 class="issue-group-date">15-07-2016</h4>
+				<div class="issue">
+					<p class="issue-body">Crash update</p>
+					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" /></label>
+				</div>
+				<div class="issue">
+					<p class="issue-body">Page visual UI Update Review</p>
+					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" /></label>
+				</div>
+				<div class="issue">
+					<p class="issue-body">Sidebar update</p>
+					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" /></label>
+				</div>
+			</section>
+			<section class="issue-group">
+				<h4 class="issue-group-date">14-07-2016</h4>
+				<div class="issue">
+					<p class="issue-body">Crash issue</p>
+					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" /></label>
+				</div>
+				<div class="issue">
+					<p class="issue-body">Visual update &amp; Crash resolve</p>
+					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" /></label>
+				</div>
+				<div class="issue">
+					<p class="issue-body">Sidebar addition</p>
+					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" /></label>
+				</div>
+			</section>
 		</main>
 	</div>
 	<script>
