starring some issues

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 				<h4 class="issue-group-date">19-07-2016</h4>
 				<div class="issue">
 					<p class="issue-body">Page changes</p>
-					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" /></label>
+					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" checked /></label>
 				</div>
 				<div class="issue">
 					<p class="issue-body">Review of last issues</p>
-					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" /></label>
+					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" checked /></label>
 				</div>
 			</section>
 			<section class="issue-group">
@@ -66,7 +66,7 @@
 				</div>
 				<div class="issue">
 					<p class="issue-body">Page visual UI Update Review</p>
-					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" /></label>
+					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" checked /></label>
 				</div>
 				<div class="issue">
 					<p class="issue-body">Sidebar update</p>
@@ -77,11 +77,11 @@
 				<h4 class="issue-group-date">14-07-2016</h4>
 				<div class="issue">
 					<p class="issue-body">Crash issue</p>
-					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" /></label>
+					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" checked /></label>
 				</div>
 				<div class="issue">
 					<p class="issue-body">Visual update &amp; Crash resolve</p>
-					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" /></label>
+					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" checked /></label>
 				</div>
 				<div class="issue">
 					<p class="issue-body">Sidebar addition</p>
