--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				</div>
 			</section>
 			<section class="issue-group">
-				<h4 class="issue-group-date">14-07-2016</h4>
+				<h4 class="issue-group-date">1 -07-2016</h4>
 				<div class="issue">
 					<p class="issue-body">Crash issue</p>
 					<label for="issue-star-checkbox" class="issue-star"><input type="checkbox" class="issue-star-checkbox" name="issue-star-checkbox" checked /></label>
@@ -94,8 +94,8 @@
 		document.addEventListener('click',function(e){
 			if(e.target && e.target.classList.contains("issue-star")) e.target.classList.toggle("issue-star-active");
 		});
-		[].forEach.call(document.querySelectorAll(".issue-star-checkbox"), function(){
-			if(this.checked) this.parentNode.classList.add("issue-star-active");
+		[].forEach.call(document.querySelectorAll(".issue-star-checkbox"), function(el){
+			if(el.checked) el.parentNode.classList.add("issue-star-active");
 		})
 	</script>
 </body>
